<resources>
    <string name="app_name">物流司机端</string>
    <string name="login_account_error">请输入车牌号</string>
    <string name="login_password_error">请输入密码</string>
    <string name="login_on_page_start">登陆界面</string>
    <string name="login_on_page_end">登陆界面</string>
    <string name="login_account">车牌号</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_forget_password_dialog_services_tel">400-860-3060</string>
    <string name="login_forget_password_dialog_services_msg">如果您忘记了密码，请联系我们的客服。</string>
    <string name="main_baidu_nav_initfail">初始导航失败</string>
    <string name="main_exit_dialog_title">提示</string>
    <string name="main_exit_dialog_message">确认操作?</string>
    <string name="main_exit_dialog_positive_btn">切换帐号</string>
    <string name="main_exit_dialog_negative_btn">退出</string>
    <string name="myorders_on_page_start">我的订单</string>
    <string name="myorders_on_page_end">我的订单</string>
    <string name="myorders_order_manage">订单管理</string>
    <string name="myorders_order_all">全部</string>
    <string name="myorders_order_receive">待接单</string>
    <string name="myorders_order_obligation">待付款</string>
    <string name="myorders_order_distribution">待配货</string>
    <string name="myorders_order_sign">待签收</string>
    <string name="myorders_order_evaluate">待评价</string>
    <string name="myorders_order_cancele">已取消</string>
    <string name="myorders_order_three_months_inside">三个月内订单</string>
    <string name="myorders_order_three_months_outside">三个月前订单</string>
    <string name="myorders_grab_goods">抢货源</string>
    <string name="myorders_order_item_empty">无</string>
    <string name="myorders_order_item_fare">面议</string>
    <string name="myorders_order_item_backstatus">回单方式:</string>
    <string name="myorders_order_item_backstatus_normal">原件</string>
    <string name="myorders_order_item_backstatus_fax">传真件</string>
    <string name="myorders_order_item_backstatus_scan">扫描件</string>
    <string name="myorders_order_item_paystatus">结算方式:</string>
    <string name="myorders_order_item_paystatus_delivery">货到付款</string>
    <string name="myorders_order_item_paystatus_backorder">回单付款</string>
    <string name="myorders_order_item_goodstype_nolimit">不限</string>
    <string name="myorders_order_item_goodstype_heavy">重货</string>
    <string name="myorders_order_item_goodstype_light">抛货</string>
    <string name="myorders_order_item_goodstype_device">设备</string>
    <string name="myorders_order_confirm_allocation">确定配货吗？</string>
    <string name="myorders_order_delete_order">确认删除此订单吗？</string>
    <string name="myorders_order_receive_order">确认接受该订单吗？</string>
    <string name="myorders_order_refuse_order">确定拒绝该订单吗？</string>
    <string name="myorders_order_location_fail">获取gps信息失败，无法定位</string>
    <string name="myorders_order_location_agent_fail">无法定位货代</string>
    <string name="myorders_order_gps_fail">获取当前gsp地址失败</string>
    <string name="myorders_order_status_appoint">已指派</string>
    <string name="myorders_order_status_new">已预订</string>
    <string name="myorders_order_status_paied">收款确认中</string>
    <string name="myorders_order_status_canceled">订单已取消</string>
    <string name="myorders_order_status_confirmreceipt_public">货代已收款</string>
    <string name="myorders_order_status_confirmreceipt_private">已接单</string>
    <string name="myorders_order_status_canvassing">已配货</string>
    <string name="myorders_order_status_executing">运输中</string>
    <string name="myorders_order_status_arrived">到达收货地</string>
    <string name="myorders_order_status_signed">已签收</string>
    <string name="myorders_order_status_refuse_signed">已拒签</string>
    <string name="myorders_order_status_driver_evaluated">司机已评价</string>
    <string name="myorders_order_status_agent_evaluated">货代已评价</string>
    <string name="myorders_order_status_over">订单完成</string>
    <string name="myorders_list_item_route">发货省</string>
    <string name="myorders_list_item_fare_lable">运费：</string>
    <string name="myorders_list_item_price">元</string>
    <string name="myorders_list_item_infofare_lable">信息费：</string>
    <string name="myorders_list_item_goods_name">电子设备</string>
    <string name="myorders_list_item_goods_type">重货</string>
    <string name="myorders_list_item_goods_weight">吨</string>
    <string name="myorders_list_item_goods_volume">立方</string>
    <string name="myorders_list_item_goods_count">件</string>
    <string name="myorders_list_item_descrption">说明：</string>
    <string name="myorders_list_item_detail_goods_no">货源编号：%1$s</string>
    <string name="myorders_list_item_detail_goods_name">货物名称：%1$s</string>
    <string name="myorders_list_item_detail_goods_type">货物类型：%1$s</string>
    <string name="myorders_list_item_detail_goods_cover">货物包装：%1$s</string>
    <string name="myorders_list_item_detail_goods_weight">重量（吨）：%1$s</string>
    <string name="myorders_list_item_detail_goods_volume">体积（方）：%1$s</string>
    <string name="myorders_list_item_detail_goods_count">件数（件）：%1$s</string>
    <string name="myorders_list_item_detail_goods_declaredvalue">声明价值（元）：%1$s</string>
    <string name="myorders_list_item_detail_goods_cashtype">结算方式：%1$s</string>
    <string name="myorders_list_item_detail_goods_backorder">回单要求：%1$s</string>
    <string name="myorders_list_item_detail_goods_deliverydate">交付日期：%1$s</string>
    <string name="myorders_list_item_detail_goods_fetchdate">揽货日期：%1$s</string>
    <string name="myorders_list_item_detail_goods_originalcity">发货地：%1$s</string>
    <string name="myorders_list_item_detail_goods_receiptcity">收货地：%1$s</string>
    <string name="myorders_list_item_detail_goods_fare">运费报价（元）：%1$s</string>
    <string name="myorders_list_item_detail_goods_status">货源状态：%1$s</string>
    <string name="myorders_list_item_detail_agent">货代信息</string>
    <string name="myorders_list_item_detail_agent_no">货代编号：</string>
    <string name="myorders_list_item_detail_agent_company">货代名称：</string>
    <string name="myorders_list_item_detail_agent_address">货代地址：</string>
    <string name="myorders_list_item_detail_agent_name">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="myorders_list_item_detail_agent_tel">联系电话：</string>
    <string name="myorders_list_item_detail_agent_location">货代位置：%1$s</string>
    <string name="myorders_list_item_detail_shipper">发货人</string>
    <string name="myorders_list_item_detail_shipper_name">发货人：%1$s</string>
    <string name="myorders_list_item_detail_shipper_address">发货地址：%1$s</string>
    <string name="myorders_list_item_detail_shipper_tel">联系电话：%1$s</string>
    <string name="myorders_list_item_detail_shipper_company">发货人公司：%1$s</string>
    <string name="myorders_list_item_detail_receipter">收货人</string>
    <string name="myorders_list_item_detail_receipter_name">收货人：%1$s</string>
    <string name="myorders_list_item_detail_receipter_address">收货地址：%1$s</string>
    <string name="myorders_list_item_detail_receipter_tel">联系电话：%1$s</string>
    <string name="myorders_list_item_detail_receipter_company">收货人公司：%1$s</string>
    <string name="myorders_list_item_detail_order_no">订单编号：%1$s</string>
    <string name="myorders_list_item_detail_order_generatetime">订单时间：%1$s</string>
    <string name="myorders_list_item_detail_order_status">订单状态：</string>
    <string name="myorders_list_item_detail_name">姓名：%1$s</string>
    <string name="myorders_list_item_detail_tel">电话</string>
    <string name="myorders_list_item_detail_company">公司：%1$s</string>
    <string name="myorders_list_item_detail_address">地址：%1$s</string>
    <string name="myorders_resufe_order_dialog_title">填写拒单理由</string>
    <string name="myorders_resufe_order_reason_maintenance">车辆维修中</string>
    <string name="myorders_resufe_order_reason_sick">司机生病</string>
    <string name="myorders_resufe_order_reason_unreasonable">运费不合理</string>
    <string name="myorders_resufe_order_reason_unfamiliar">线路不熟悉</string>
    <string name="myorders_resufe_order_reason_other">其它</string>
    <string name="myorders_resufe_order_reason_other_hint">最大可输入20个字</string>
    <string name="grabgoods_goods_manage">抢货源</string>
    <string name="grabgoods_goods_available">可抢货源</string>
    <string name="grabgoods_goods_grabed">已抢货源</string>
    <string name="grabgoods_dialog_failure">动作太慢了，该货源已被抢完了！</string>
    <string name="grabgoods_dialog_success">操作成功，等待审批</string>
    <string name="grabgoods_dialog_success_mark">注:只有通过公司调度员的审批，抢单才会成功</string>
    <string name="grabgoods_grap_empty_list_msg">来的太晚了，货源都被抢完了！</string>
    <string name="grabgoods_has_available_all">全部</string>
    <string name="grabgoods_has_available_success">抢单成功</string>
    <string name="grabgoods_has_available_failure">抢单失败</string>
    <string name="grabgoods_has_available_audit">审批中</string>
    <string name="grabgoods_list_item_route">发货省</string>
    <string name="grabgoods_list_item_fare_lable">运费：</string>
    <string name="grabgoods_list_item_price">元</string>
    <string name="grabgoods_list_item_infofare_lable">信息费：</string>
    <string name="grabgoods_list_item_goods_name">电子设备</string>
    <string name="grabgoods_list_item_goods_type">重货</string>
    <string name="grabgoods_list_item_goods_weight">吨</string>
    <string name="grabgoods_list_item_goods_volume">立方</string>
    <string name="grabgoods_list_item_goods_count">件</string>
    <string name="grabgoods_list_item_goods_generatetime">发布时间：2013-11-13 09:22</string>
    <string name="grabgoods_list_item_failure_reason">失败原因：货源已分配完毕</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loging">登录中...</string>
    <string name="sign_date">货物已于%1$s日签收</string>
    <string name="refuse_date">货物已于%1$s日被拒签</string>
    <string name="refuse_memo">拒签理由：%1$s</string>
    <string name="get_signinfo_failed">获取签收信息失败</string>
    <string name="menu_home">首页</string>
    <string name="menu_board">货源信息</string>
    <string name="menu_rim">周边货源</string>
    <string name="menu_my_orders">我的订单</string>
    <string name="menu_my_tasks">我的任务</string>
    <string name="menu_publish">发布运力</string>
    <string name="publishing">发布中...</string>
    <string name="revokeing">撤消中...</string>
    <string name="delete_item_ok">删除成功</string>
    <string name="delete_item_failed">删除失败</string>
    <string name="publish_ok">发布成功</string>
    <string name="publish_failed">发布失败</string>
    <string name="edit_ok">修改成功</string>
    <string name="edit_failed">修改失败</string>
    <string name="refuse_ok">拒单成功</string>
    <string name="refuse_failed">拒单失败</string>
    <string name="receive_ok">接单成功</string>
    <string name="receive_failed">接单失败</string>
    <string name="errcode_network_unavailable">网络连接不可用</string>
    <string name="errcode_network_response_no_data">暂时没有新数据</string>
    <string name="errcode_network_json_exception">服务器数据不正确</string>
    <string name="errcode_network_response_timeout">连接服务器超时，请重试</string>
    <string name="errcode_network_database_io">数据库错误</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="no_data">没有内容，刷新一下试试</string>
    <string name="errcode_network_cookie_required">授权已过期，请重新登录</string>
    <string name="delete_favorite_ok">取消收藏成功</string>
    <string name="delete_favorite_failed">取消收藏失败</string>
    <string name="favorite_ok">收藏成功</string>
    <string name="favorite_failed">收藏失败</string>
    <string name="confirmGoodsToCarry_ok">确认揽货成功</string>
    <string name="confirmGoodsToCarry_failed">确认揽货失败</string>
    <string name="confirmSignGoods_ok">确认签收成功</string>
    <string name="confirmSignGoods_failed">确认签收失败</string>
    <string name="refuseSignGoods_ok">确认拒签成功</string>
    <string name="star_level_title">服务星级</string>
    <string name="star_level_score">%1$s分</string>
    <string name="star_level_goodsdiscription_score">货源描述：%1$s分</string>
    <string name="star_level_service_score">服务质量：%1$s分</string>
    <string name="star_level_deal_num">共成交：%1$s笔</string>
</resources>