<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/driver_icon" />

            <LinearLayout
                android:id="@+id/llyt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_driver"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-2dp"
                    android:background="@drawable/login_account_bg"
                    android:ems="10"
                    android:hint="@string/login_account"
                    android:inputType="none"
                    android:paddingLeft="5dp"
                    android:paddingRight="30dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llyt_account"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-2dp"
                    android:background="@drawable/login_password_bg"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="numberPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="30dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llyt_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_bg_new" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/llyt_login"
                android:layout_below="@+id/llyt_login"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:text="@string/login_forget_password"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>